# LLaDA_Diffusion_FEC

./: .gitignore  README.md  pyproject.toml
data/: README.md  wikitext2_genfec_manifest.json  wikitext2_genfec_test_messages.json
docs/: AGENT_HANDOFF.md  README.md  architecture.md  development_notes.md  experiment_plan.md  hash_profiles.md  implementation_plan.md  lessons_from_genfec.md  llada_decoding_design.md  llada_server_model_notes.md  project_overview.md  reference_sources.md  research_runbook.md  roadmap.md  server_ssh_workflow.md
src/diffusion_fec/: __init__.py  types.py
src/diffusion_fec/analysis/: __init__.py  (+5 more)
tests/: artifact_helpers.py  test_aggregate_results.py  test_baseline_overhead.py  test_channel_recovery_reanalysis.py  test_classical_micro_eval.py  test_constraints.py  test_decoder_candidate_filter.py  test_diagnostic_analysis.py  test_fake_diffusion_decoder.py  test_hash_profiles.py  test_hybrid_eval.py  test_llada_e2e_smoke.py  test_llada_micro_eval.py  test_llada_model_smoke.py  test_llada_tokenizer_smoke.py  test_loss_metrics.py  test_lt_fountain_baseline.py  test_micro_eval.py  test_models_llada.py  test_packet_loss_channels.py  test_packetizer.py  test_protection.py  test_random_loss.py  test_reporting.py  test_smoke_harness.py  test_smoke_runner.py  test_sparse_fountain_xor.py  test_streaming_window_baseline.py  test_sweep.py  test_text_samples.py  test_token_hash.py  test_token_hash_adapter.py  test_token_metrics.py  test_tokenized_samples.py  test_types.py  test_xor_equations.py  test_xor_linear_solver.py  test_xor_parity_baseline.py
(+42 files in other folders)
