[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-fec"
version = "0.1.0"
description = "Research framework for masked-diffusion token-erasure recovery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
hf = [
    "accelerate>=1.0",
    "torch>=2.5",
    "transformers>=4.46.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "hf: tests that require Hugging Face optional dependencies and network/cache access",
    "slow: tests that may load model weights or run expensive inference",
]
